# rts

./: .pre-commit-config.yaml  .safety-policy.yml  CHANGELOG.md  Dockerfile  LICENSE.md  MakeFile  README  mkdocs.yml  pyproject.toml  setup.py
.github/workflows/: publish.yml
docs/: requirements.txt  tests.md
rts/: cli.py  main.py
rts/lib/: basic.json
tests/: test_app.py
